=add error modal, create some common directive, etc...

--- a/public/src/less/cms.less
+++ b/public/src/less/cms.less
@@ -133,11 +133,11 @@ body
 @import './partials/_toolbar.less';
 @import './partials/_icons.less';
 @import './partials/_components.less';
+@import "./modules/_modal.less";
 
+//external files
+@import './modules/external/gamification.less';
 
 //vendor less
 @import './../../vendor/bootstrap-chosen/bootstrap-chosen.less';
 @import './../../vendor/css-toggle-switch/src/toggle-switch.less';
-
-
-
