--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -14,13 +14,67 @@
 @import "./../../vendor/font-awesome/less/stacked.less";
 @import "./../../vendor/font-awesome/less/icons.less";
 
-@import './../../vendor/bootstrap/less/bootstrap.less';
+@import "./../../vendor/bootstrap/less/variables.less";
+
+//custom variables
+@import './modules/_variables.less';
+
+@import "./../../vendor/bootstrap/less/mixins.less";
+
+// Reset
+@import "./../../vendor/bootstrap/less/normalize.less";
+@import "./../../vendor/bootstrap/less/print.less";
+
+// Core
+@import "./../../vendor/bootstrap/less/scaffolding.less";
+@import "./../../vendor/bootstrap/less/type.less";
+@import "./../../vendor/bootstrap/less/code.less";
+@import "./../../vendor/bootstrap/less/grid.less";
+@import "./../../vendor/bootstrap/less/tables.less";
+@import "./../../vendor/bootstrap/less/forms.less";
+@import "./../../vendor/bootstrap/less/buttons.less";
+
+// Compon
+@import "./../../vendor/bootstrap/less/component-animations.less";
+@import "./../../vendor/bootstrap/less/glyphicons.less";
+@import "./../../vendor/bootstrap/less/dropdowns.less";
+@import "./../../vendor/bootstrap/less/button-groups.less";
+@import "./../../vendor/bootstrap/less/input-groups.less";
+@import "./../../vendor/bootstrap/less/navs.less";
+@import "./../../vendor/bootstrap/less/navbar.less";
+@import "./../../vendor/bootstrap/less/breadcrumbs.less";
+@import "./../../vendor/bootstrap/less/pagination.less";
+@import "./../../vendor/bootstrap/less/pager.less";
+@import "./../../vendor/bootstrap/less/labels.less";
+@import "./../../vendor/bootstrap/less/badges.less";
+@import "./../../vendor/bootstrap/less/jumbotron.less";
+@import "./../../vendor/bootstrap/less/thumbnails.less";
+@import "./../../vendor/bootstrap/less/alerts.less";
+@import "./../../vendor/bootstrap/less/progress-bars.less";
+@import "./../../vendor/bootstrap/less/media.less";
+@import "./../../vendor/bootstrap/less/list-group.less";
+@import "./../../vendor/bootstrap/less/panels.less";
+@import "./../../vendor/bootstrap/less/wells.less";
+@import "./../../vendor/bootstrap/less/close.less";
+// Component
+@import "./../../vendor/bootstrap/less/modals.less";
+@import "./../../vendor/bootstrap/less/tooltip.less";
+@import "./../../vendor/bootstrap/less/popovers.less";
+@import "./../../vendor/bootstrap/less/carousel.less";
+
+// Utilitity
+@import "./../../vendor/bootstrap/less/utilities.less";
+@import "./../../vendor/bootstrap/less/responsive-utilities.less";
+
 @import './../login/login/login.less';
 @import './../login/register/register.less';
 @import './../login/forgotPassword/forgotPassword.less';
 @import './../login/activateAccount/activateAccount.less';
 @import './../login/resetPassword/resetPassword.less';
 @import './partials/_typography.less';
+
+@import './modules/external/gamification.less';
+@import "./modules/_modal.less";
 
 @login-them-color: #0191c8;
 @login-text-color: black;
