--- a/public/src/less/partials/_content.less
+++ b/public/src/less/partials/_content.less
@@ -17,6 +17,7 @@
     background-color: white;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 2px 0, white 0 0 0 3px inset;
+    border: solid 1px #e6e6e6;
 
     &.panel-highlighted
     {
@@ -75,6 +76,32 @@
   input[type="text"],input[type="search"],input[type="password"], textarea, select
   {
     &:extend(.form-control all);
+  }
+
+  //alert div
+  .alert-waring
+  {
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+    color: #8a6d3b;
+  }
+
+  .alert.alert-warning
+  {
+    position: relative;
+    border: none;
+    padding-left: 50px;
+    border-left: solid 3px #f4c178;
+
+    i.fa
+    {
+      position: absolute;
+      color: #f4c178;
+      left: 16px;
+      font-size: 31px;
+      content: "\f06a";
+      line-height: 19px;
+    }
   }
 }
 
