=add nginx config, upload controller, body-bus, etc

--- a/public/src/cms/userAccount/userAccount.less
+++ b/public/src/cms/userAccount/userAccount.less
@@ -38,8 +38,14 @@
     }
   }
 
+  .img-thumbnail
+  {
+    max-height: 96px;
+    width: auto;
+  }
+
   .upload-btn
   {
-    margin: -14px 0px 0px 13px;
+    margin: -14px 0px 0px 2px;
   }
 }
