--- a/public/src/less/partials/_navbar.less
+++ b/public/src/less/partials/_navbar.less
@@ -107,6 +107,8 @@
                 border: none;
                 //border-radius: 32px;
                 padding: 0px;
+                max-height: 32px;
+                width: auto;
               }
             }
           }
