--- a/public/src/less/modules/_variables.less
+++ b/public/src/less/modules/_variables.less
@@ -14,6 +14,10 @@
 @navbar-default-link-hover-color: @beaver-cms-theme;
 @navbar-default-link-hover-bg: white;
 
+//sidebar color code
+@sidebar-default-bg: @beaver-cms-theme;
+@sidebar-active-link-border-color: #65B688;
+
 //font-path
 @icon-font-path: '../assets/fonts/';
 
