--- a/public/src/less/modules/_sidebar.less
+++ b/public/src/less/modules/_sidebar.less
@@ -264,7 +264,8 @@
     float: left;
     color: #FFF;
     font-weight: 400;
-    margin-top: 8px;
+    margin-top: 17px;
+    text-transform: uppercase;
 
     span {
       font-size: 11px;
