--- a/public/src/less/modules/_variables.less
+++ b/public/src/less/modules/_variables.less
@@ -15,7 +15,7 @@
 @navbar-default-link-hover-bg: white;
 
 //sidebar color code
-@sidebar-default-bg: @beaver-cms-theme;
+@sidebar-default-bg: #F4F4F4;
 @sidebar-active-link-border-color: #65B688;
 
 //font-path
