task management ui, backend, change css login, etc

--- a/public/src/less/cms.less
+++ b/public/src/less/cms.less
@@ -107,6 +107,7 @@ body
 @import './../cms/home/home.less';
 @import './../cms/userAccount/userAccount.less';
 @import './../cms/location/location.less';
+@import './../cms/task/task.less';
 
 //Common less
 @import './partials/_content.less';
