--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -82,7 +82,8 @@
 body
 {
   font-family: "Open Sans", "ProximaNovaRegular", "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
-  background: #0191c8 url("../assets/images/noise.png");
+  //background: #0191c8 url("../assets/images/noise.png");
+  background: url("../assets/images/pattern-3z1x.png");
   font-size: 14px;
   font-weight: 400;
   line-height: 1.428571429;
