--- a/public/src/login/login/login.less
+++ b/public/src/login/login/login.less
@@ -56,13 +56,10 @@ a
   margin-top: 220px;
   color: @login-text-color;
   font-weight: 400;
-  background: white;
-  padding: 10px 0px 57px 0px;
-  width: 70%;
+  padding: 10px 10px 57px 10px;
 
   .title-wrapper
   {
-    padding-left: 15px;
     margin-bottom: 27px;
     font-weight: 300;
 
@@ -70,6 +67,29 @@ a
     {
       font-size: 35px;
       margin-bottom: 20px;
+    }
+  }
+
+  .or
+  {
+    border-top: 1px dashed #bbb;
+    clear: both;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: black;
+
+    &>span
+    {
+      display: block;
+      background: url("../assets/images/pattern-3z1x.png");
+      font-size: 12px;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      margin: 0 auto;
+      text-align: center;
+      position: relative;
+      top: -11px;
     }
   }
 
@@ -186,7 +206,6 @@ a
 
     .email-login-wrapper
     {
-      border-left: 1px dotted #616A6F;
       margin-top: 10px;
 
       .control
